--- a/index.html
+++ b/index.html
@@ -36,13 +36,21 @@
           </ul>
         </nav>
         <ul class="list contacts">
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
+          <li class="item email">
+            <a href="mailto:info@devstudio.com" class="link">
+              <svg class="icon-email" width="16px" height="12px">
+                <use href="./image/symbol-defs.svg#icon-email"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
-          <li class="item">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          <li class="item phone">
+            <a href="tel:+380961111111" class="link">
+              <svg class="icon-phone" width="10px" height="16px">
+                <use href="./image/symbol-defs.svg#icon-phone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -141,12 +149,72 @@
             />
             <h3 class="name">Игорь Демьяненко</h3>
             <p class="position">Product Designer</p>
+            <ul class="list social-networks">
+              <li class="icon">
+                <a class="link social-link" href="">
+                  <svg class="social-icon" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon">
+                <a class="link social-link" href="">
+                  <svg class="social-icon" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon">
+                <a class="link social-link" href="">
+                  <svg class="social-icon" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon">
+                <a class="link social-link" href="">
+                  <svg class="social-icon" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </li>
 
           <li class="item">
             <img src="./image/Olga-Repina.jpg" alt="Ольга Репина" width="270" />
             <h3 class="name">Ольга Репина</h3>
             <p class="position">Frontend Developer</p>
+            <ul class="list social-networks">
+              <li class="icon">
+                <a class="link social-link" href="">
+                  <svg class="social-icon" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon">
+                <a class="link social-link" href="">
+                  <svg class="social-icon" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon">
+                <a class="link social-link" href="">
+                  <svg class="social-icon" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon">
+                <a class="link social-link" href="">
+                  <svg class="social-icon" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </li>
 
           <li class="item">
@@ -157,6 +225,36 @@
             />
             <h3 class="name">Николай Тарасов</h3>
             <p class="position">Marketing</p>
+            <ul class="list social-networks">
+              <li class="icon">
+                <a class="link social-link" href="">
+                  <svg class="social-icon" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon">
+                <a class="link social-link" href="">
+                  <svg class="social-icon" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon">
+                <a class="link social-link" href="">
+                  <svg class="social-icon" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon">
+                <a class="link social-link" href="">
+                  <svg class="social-icon" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </li>
 
           <li class="item">
@@ -167,6 +265,88 @@
             />
             <h3 class="name">Михаил Ермаков</h3>
             <p class="position">UI Designer</p>
+            <ul class="list social-networks">
+              <li class="icon">
+                <a class="link social-link" href="">
+                  <svg class="social-icon" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon">
+                <a class="link social-link" href="">
+                  <svg class="social-icon" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon">
+                <a class="link social-link" href="">
+                  <svg class="social-icon" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon">
+                <a class="link social-link" href="">
+                  <svg class="social-icon" width="20px" height="20px">
+                    <use href="./image/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <!--Постоянные клиенты-->
+
+    <section class="our-clients">
+      <div class="conteiner">
+        <h2 class="title">Постоянные клиенты</h2>
+        <ul class="list flexbox">
+          <li class="item">
+            <a class="client link" href="">
+              <svg class="icon" width="44.27" height="49.23">
+                <use href="./image/symbol-defs.svg#icon-logo-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a class="client link" href="">
+              <svg class="icon" width="40" height="52">
+                <use href="./image/symbol-defs.svg#icon-logo-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a class="client link" href="">
+              <svg class="icon" width="41" height="42.6">
+                <use href="./image/symbol-defs.svg#icon-logo-3"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a class="client link" href="">
+              <svg class="icon" width="79.66" height="42.02">
+                <use href="./image/symbol-defs.svg#icon-logo-4"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a class="client link" href="">
+              <svg class="icon" width="59" height="47">
+                <use href="./image/symbol-defs.svg#icon-logo-5"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a class="client link" href="">
+              <svg class="icon" width="88.48" height="45.44">
+                <use href="./image/symbol-defs.svg#icon-logo-6"></use>
+              </svg>
+            </a>
           </li>
         </ul>
       </div>
@@ -174,28 +354,63 @@
 
     <!---Подвал-->
     <footer class="page-footer">
-      <div class="conteiner">
-        <a href="./index.html" class="logo link"
-          ><span class="logo-web">Web</span
-          ><span class="logo-studio">Studio</span></a
-        >
+      <div class="conteiner flexbox">
+        <div>
+          <a href="./index.html" class="logo link"
+            ><span class="logo-web">Web</span
+            ><span class="logo-studio">Studio</span></a
+          >
 
-        <address class="address">
-          <p>г. Киев, пр-т Леси Украинки, 26</p>
-        </address>
+          <address class="address">
+            <p>г. Киев, пр-т Леси Украинки, 26</p>
+          </address>
 
-        <ul class="list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="contacts link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="contacts link"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+          <ul class="list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="contacts link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="contacts link"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="join-in">
+          <h2>ПРИСОЕДИНЯЙТЕСЬ</h2>
+          <ul class="list social-networks">
+            <li class="icon">
+              <a class="link social-link" href="">
+                <svg class="social-icon" width="20px" height="20px">
+                  <use href="./image/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon">
+              <a class="link social-link" href="">
+                <svg class="social-icon" width="20px" height="20px">
+                  <use href="./image/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon">
+              <a class="link social-link" href="">
+                <svg class="social-icon" width="20px" height="20px">
+                  <use href="./image/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon">
+              <a class="link social-link" href="">
+                <svg class="social-icon" width="20px" height="20px">
+                  <use href="./image/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
