--- a/portfolio.html
+++ b/portfolio.html
@@ -227,7 +227,7 @@
           </ul>
         </div>
         <div class="join-in">
-          <h2>ПРИСОЕДИНЯЙТЕСЬ</h2>
+          <p class="title">ПРИСОЕДИНЯЙТЕСЬ</p>
           <ul class="list social-networks">
             <li class="icon">
               <a class="link social-link" href="">
